2006-08-25  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/ChangeTypes.py: Clean up type name conversions; work
	over all the events, regardless of who references them.
	* src/RelLib/_GrampsType.py (get_standard_names, get_standard_xml): 
	Add methods to obtain standard type lists.

2006-08-25  Zsolt Foldvari  <zsolt.foldvari@nokia.com>
	* src/GrampsCfg.py: Implement callback mechanism for dynamic name format
	change.
	* src/ViewManager.py (__init__, preferences_activate, change_page):
	Rebuild the active page after name fomat changed by connecting to
	GrampsPreferences' signal

2006-08-24  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsInMemDB.py (undo_data): Add method to take
	care of secondary indices on undo/redo;
	(_commit_inmem_base): Replace _clean_up and add more routine tasks.

2006-08-24  Brian Matherly  <brian@gramps-project.org>
	* src/Config/_GrampsIniKeys.py: Handle invalid default key
	* src/plugins/NarrativeWeb.py: Fix typos

2006-08-24  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsInMemDB.py: update maps properly on commit

2006-08-24  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/EventCmp.py: Remove sorting columns for saving.
	* src/plugins/PHPGedViewConnector.py: Disable registration, until
	this plugin is fixed.
	* src/glade/gramps.glade (family_editor): Remove Y expansion
	property on mother-related buttons.
	* src/DataViews/_FamilyList.py: Add column editor.
	* src/plugins/ChangeTypes.py (run_tool): Properly set the new type.
	(on_apply_clicked): Properly save entered types, including custom.

2006-08-23  Alex Roitman  <shura@gramps-project.org>
	* src/DataViews/_PersonView.py (person_removed): Properly create
	and pass the filter when searchbar is enabled (not sidebar).
	* src/FilterEditor/_FilterEditor.py (clone_filter): Add method;
	Support clone-and-edit functionality.
	* src/glade/rule.glade (filter_list): Add clone button.