@@ -249,6 +249,7 @@ class DisplayState(GrampsDb.GrampsDBCallback):
 
     __signals__ = {
         'filters-changed' : (str,),
+        'nameformat-changed' : None,
         }
 
     def __init__(self, window, status, progress, warnbtn, uimanager):
